--- a/update-manifest.json
+++ b/update-manifest.json
@@ -2,7 +2,7 @@
   "version": "2.1.0",
   "releaseDate": "2026-01-15",
   "changeLog": "- Fixed critical bug in calibration module\n- Improved database performance\n- Added new reporting features\n- Updated UI themes",
-  "downloadUrl": "https://github.com/pavlinchuk/LMS/LMS_2.1.0.zip",
+  "downloadUrl": "https://github.com/pavlinchuk/LMS/blob/master/19012026.zip",
   "fileSize": 52428800,
   "checksum": "a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6",
   "isRequired": false,
