--- a/update-manifest.json
+++ b/update-manifest.json
@@ -1,10 +1,10 @@
 {
-  "version": "2.1.0.1",
+  "version": "2.1.0.2",
   "releaseDate": "2026-01-15",
   "changeLog": "- Fixed critical bug in calibration module\n- Improved database performance\n- Added new reporting features\n- Updated UI themes",
-  "downloadUrl": "https://github.com/pavlinchuk/LMS/blob/master/19012026.zip",
-  "fileSize": 52428800,
+  "downloadUrl": "https://github.com/pavlinchuk/LMS/19012026.zip",
+  "fileSize": 21423,
   "checksum": "a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6",
   "isRequired": false,
-  "minimumWindowsVersion": "10"
+  "minimumWindowsVersion": "7"
 }
